Fix header color

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  background-color: rgba($color: var(--bg-color), $alpha: 0.95);
+  background-color: rgba($color: #fff, $alpha: 0.9);
   backdrop-filter: blur(6px);
   display: flex;
   justify-content: center;
