--- a/components/mdx/blog.module.scss
+++ b/components/mdx/blog.module.scss
@@ -1,4 +1,10 @@
-.post {
+.article {
+  margin: 2em 0;
+
+  > header {
+    margin-bottom: 3em;
+  }
+
   h1,
   h2,
   h3,
@@ -6,5 +12,51 @@
   h5,
   h6 {
     color: var(--heading-color);
+  }
+}
+
+.title {
+  font-size: 3em;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+  line-height: 1em;
+  margin: 0;
+}
+
+.info {
+  color: #555;
+  font-weight: 300;
+  margin-top: 2em;
+  margin-bottom: 0.625em;
+
+  strong {
+    font-weight: 700;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: var(--heading-color);
+    }
+  }
+}
+
+.tags {
+  display: flex;
+  flex-direction: row;
+
+  p {
+    font-size: 0.9em;
+    margin: 0 0.5em 0 0;
+    padding: 0.5em;
+    border-radius: 0.1em;
+    color: var(--text-color);
+    background-color: #f1f4f8;
+  }
+
+  p:last-child {
+    margin: 0;
   }
 }
