--- a/styles/app.css
+++ b/styles/app.css
@@ -1,33 +1,3 @@
-@import "normalize.css";
-
-/* Theme */
-:root {
-  --bg-color: #fff;
-  --text-color: #333;
-  --heading-color: #000;
-}
-
-/* Box-sizing reset */
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-/* System fonts and base styles */
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: var(--text-color);
-  background-color: var(--bg-color);
-}
-pre,
-code,
-kbd,
-samp {
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
-    monospace;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
