--- a/styles/app.css
+++ b/styles/app.css
@@ -35,4 +35,13 @@
   blockquote {
     @apply bg-gray-100 my-6 pt-4 pb-0.5 px-3 border-l-8 border-gray-300;
   }
+  ol {
+    @apply list-decimal mb-4 pl-8;
+  }
+  ol ol,
+  ol ul,
+  ul ol,
+  ul ul {
+    @apply mb-0;
+  }
 }
