--- a/styles/prism.css
+++ b/styles/prism.css
@@ -1,66 +1,41 @@
-code,
 code[class*="language-"],
-pre,
 pre[class*="language-"] {
-  color: black;
-  background: none;
+  @apply text-black bg-none text-left whitespace-pre;
   text-shadow: 0 1px white;
-  font-size: 1em;
-  text-align: left;
-  white-space: pre;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.5;
-  tab-size: 4;
   hyphens: none;
 }
-pre::-moz-selection,
 pre[class*="language-"]::-moz-selection,
-pre ::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
-code::-moz-selection,
 code[class*="language-"]::-moz-selection,
-code ::-moz-selection,
 code[class*="language-"] ::-moz-selection {
   text-shadow: none;
   background: #b3d4fc;
 }
-pre::selection,
 pre[class*="language-"]::selection,
-pre ::selection,
 pre[class*="language-"] ::selection,
-code::selection,
 code[class*="language-"]::selection,
-code ::selection,
 code[class*="language-"] ::selection {
   text-shadow: none;
   background: #b3d4fc;
 }
 @media print {
-  code,
   code[class*="language-"],
-  pre,
   pre[class*="language-"] {
     text-shadow: none;
   }
 }
-
-/* Code blocks */
-pre,
 pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
-:not(pre) > code,
 :not(pre) > code[class*="language-"],
-pre,
 pre[class*="language-"] {
   background: #f5f2f0;
 }
-/* Inline code */
-:not(pre) > code,
 :not(pre) > code[class*="language-"] {
   padding: 0.1em;
   border-radius: 0.3em;
