--- a/styles/app.css
+++ b/styles/app.css
@@ -2,132 +2,99 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Prismjs */
-code,
-code[class*="language-"],
-pre,
-pre[class*="language-"] {
-  color: black;
-  background: none;
-  text-shadow: 0 1px white;
-  font-size: 1em;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  tab-size: 4;
-  hyphens: none;
-}
-pre::-moz-selection,
-pre[class*="language-"]::-moz-selection,
-pre ::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code ::-moz-selection,
-code[class*="language-"] ::-moz-selection {
-  text-shadow: none;
-  background: #b3d4fc;
-}
-pre::selection,
-pre[class*="language-"]::selection,
-pre ::selection,
-pre[class*="language-"] ::selection,
-code::selection,
-code[class*="language-"]::selection,
-code ::selection,
-code[class*="language-"] ::selection {
-  text-shadow: none;
-  background: #b3d4fc;
-}
-@media print {
-  code,
-  code[class*="language-"],
-  pre,
-  pre[class*="language-"] {
-    text-shadow: none;
+@layer base {
+  main {
+    @apply container max-w-2xl mx-auto my-10 px-4 lg:px-0;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-medium pt-5 mb-2;
+  }
+  h1 {
+    @apply text-5xl;
+  }
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  h4 {
+    @apply text-2xl;
+  }
+  h5 {
+    @apply text-xl;
+  }
+  h6 {
+    @apply text-lg;
+  }
+  p {
+    @apply font-normal text-base mb-4;
+  }
+  blockquote {
+    @apply bg-gray-100 my-6 pt-4 pb-px px-3 border-l-8 border-gray-300;
+  }
+  ol,
+  ul {
+    @apply mb-4 pl-8;
+  }
+  ol {
+    @apply list-decimal;
+  }
+  ul {
+    @apply list-disc;
+  }
+  ol ol,
+  ol ul,
+  ul ol,
+  ul ul {
+    @apply mb-0;
+  }
+  ul ul,
+  ol ul {
+    list-style-type: circle;
+  }
+  pre {
+    @apply mb-4 p-5 overflow-auto;
+    background: #f5f2f0;
+  }
+  code {
+    @apply bg-gray-100 text-sm font-bold p-1 rounded-sm;
+  }
+  code:before,
+  code:after {
+    @apply font-normal text-xs;
+    content: "`";
+  }
+  pre code {
+    @apply bg-transparent font-normal p-0;
+  }
+  pre code::before,
+  pre code:after {
+    content: none;
+  }
+  hr {
+    @apply my-4;
+  }
+  a {
+    @apply text-blue-500;
+  }
+  img {
+    max-width: 100%;
+    vertical-align: middle;
   }
 }
-/* Code blocks */
-pre,
-pre[class*="language-"] {
-  padding: 1em;
-  margin: 0.5em 0;
-  overflow: auto;
+
+@layer utilities {
+  .backdrop-blur {
+    backdrop-filter: blur(6px);
+  }
 }
-:not(pre) > code,
-:not(pre) > code[class*="language-"],
-pre,
-pre[class*="language-"] {
-  background: #f5f2f0;
-}
-/* Inline code */
-:not(pre) > code,
-:not(pre) > code[class*="language-"] {
-  padding: 0.1em;
-  border-radius: 0.3em;
-  white-space: normal;
-}
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: slategray;
-}
-.token.punctuation {
-  color: #999;
-}
-.token.namespace {
-  opacity: 0.7;
-}
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  color: #905;
-}
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #690;
-}
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: #9a6e3a;
-  background: hsla(0, 0%, 100%, 0.5);
-}
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-  color: #07a;
-}
-.token.function,
-.token.class-name {
-  color: #dd4a68;
-}
-.token.regex,
-.token.important,
-.token.variable {
-  color: #e90;
-}
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-.token.entity {
-  cursor: help;
+
+@layer components {
+  @import url(~styles/prism.css);
 }
