Update homepage and seo props

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .backdrop-blur {
+    backdrop-filter: blur(6px);
+  }
+}
