Update header and base styles

--- a/styles/app.css
+++ b/styles/app.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .container-custom {
-    @apply px-4 py-10 max-w-3xl sm:px-6 sm:py-12 lg:max-w-4xl lg:py-16 lg:px-8 xl:max-w-6xl;
+    @apply px-4 max-w-3xl sm:px-6 lg:max-w-4xl lg:px-8 xl:max-w-6xl;
   }
 }
 
