🎨 Use consistent Tailwind prose styles (#64)

--- a/styles/app.css
+++ b/styles/app.css
@@ -2,87 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .backdrop-blur {
-    backdrop-filter: blur(6px);
+@layer components {
+  .container-custom {
+    @apply px-4 max-w-3xl sm:px-6 lg:max-w-4xl lg:px-8 xl:max-w-6xl;
   }
 }
 
-code[class*="language-"],
-pre[class*="language-"] {
-  color: #ccc;
+@layer utilities {
+  .backdrop-blur {
+    backdrop-filter: blur(16px);
+  }
 }
 
-.token.comment,
-.token.block-comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #999;
-}
-
-.token.punctuation {
-  color: #ccc;
-}
-
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.deleted {
-  color: #e2777a;
-}
-
-.token.function-name {
-  color: #6196cc;
-}
-
-.token.boolean,
-.token.number,
-.token.function {
-  color: #f08d49;
-}
-
-.token.property,
-.token.class-name,
-.token.constant,
-.token.symbol {
-  color: #f8c555;
-}
-
-.token.selector,
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.builtin {
-  color: #cc99cd;
-}
-
-.token.string,
-.token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
-  color: #7ec699;
-}
-
-.token.operator,
-.token.entity,
-.token.url {
-  color: #67cdcc;
-}
-
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-
-.token.entity {
-  cursor: help;
-}
-
-.token.inserted {
-  color: green;
+#__next {
+  @apply antialiased;
 }
