--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply antialiased;
+    scroll-behavior: smooth;
+  }
+}
