Read blog posts' description

--- a/styles/app.css
+++ b/styles/app.css
@@ -8,3 +8,11 @@
     scroll-behavior: smooth;
   }
 }
+
+@layer utilities {
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+}
