--- a/styles/app.css
+++ b/styles/app.css
@@ -2,9 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-  .container-custom {
-    @apply px-4 max-w-3xl sm:px-6 lg:max-w-4xl lg:px-8 xl:max-w-6xl;
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+  body {
+    @apply antialiased bg-white dark:bg-black text-gray-700 dark:text-gray-300;
+  }
+  strong {
+    @apply font-semibold;
   }
 }
 
@@ -12,8 +18,14 @@
   .backdrop-blur {
     backdrop-filter: saturate(1.8) blur(5px);
   }
-}
-
-#__next {
-  @apply antialiased;
+  .line-clamp-1 {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+  }
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
 }
