--- a/styles/app.css
+++ b/styles/app.css
@@ -12,6 +12,9 @@
   strong {
     @apply font-semibold;
   }
+  *::selection {
+    @apply bg-green-250 text-gray-950 dark:bg-indigo-550 dark:text-gray-50;
+  }
 }
 
 @layer utilities {
