--- a/styles/app.css
+++ b/styles/app.css
@@ -18,7 +18,15 @@
 }
 
 @layer utilities {
-  .backdrop-blur {
-    backdrop-filter: saturate(1.8) blur(5px);
+  @supports (backdrop-filter: none) {
+    .backdrop-blur {
+      @apply bg-white dark:bg-black bg-opacity-70 dark:bg-opacity-50;
+      backdrop-filter: saturate(1.8) blur(5px);
+    }
+  }
+  @supports not (backdrop-filter: none) {
+    .backdrop-blur {
+      @apply bg-white dark:bg-black bg-opacity-90 dark:bg-opacity-90;
+    }
   }
 }
