🎨 Style selection with opacity in all browsers

--- a/styles/app.css
+++ b/styles/app.css
@@ -13,12 +13,7 @@
     @apply font-semibold;
   }
   *::selection {
-    @apply bg-green-250 text-gray-950 dark:bg-magenta dark:text-gray-50;
-  }
-  @supports (-moz-appearance: none) {
-    *::selection {
-      @apply bg-opacity-80 dark:bg-opacity-75;
-    }
+    @apply bg-green-250 bg-opacity-80 text-gray-950 dark:bg-magenta dark:bg-opacity-75 dark:text-gray-50;
   }
 }
 
